version/0.34/_sources/api/solver/_autosummary/settings/radiator_2_child.rst.txt
:orphan:

.. _radiator_2_child:

radiator_child
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.radiator_2_child
    :show-inheritance:

.. rubric:: Attributes

========================================   ==========================================================

Attribute                                                                                     Summary

========================================   ==========================================================
:ref:`name <name_4>`                                                              Name of the object.

:ref:`locations <locations_2>`                                                   Input location name.

:ref:`radiator <radiator_1>`                   Allows to change radiator model variables or settings.

:ref:`discrete_phase <discrete_phase_2>`                                     Discrete Phase settings.

:ref:`geometry <geometry_6>`                   Allows to change geometry model variables or settings.

:ref:`phase <phase_21>`                                            Domain name to define settings on.

========================================   ==========================================================

.. rubric:: Methods

==================================   ===============================================

Method                                                                       Summary

==================================   ===============================================
:ref:`display <display_4>`                                   Display physics object.

:ref:`split <split_1>`                   Input boundary and location names to split.

:ref:`set_location <set_location>`                              Input location name.

:ref:`set_type <set_type_3>`                      Change the type for this boundary.

==================================   ===============================================

.. rubric:: Included in:

==============================   ================

Parent                                    Summary

==============================   ================
:ref:`radiator_2 <radiator_2>`       Thread-type.

==============================   ================

